--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
         <h1>Hello, World!</h1>
+        <a href="/root/01-pages/message.html">other site</a>
     </body>
 </html>
