--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
     <body>
         <h1>Hello, World!</h1>
         <a href="/root/01-pages/message.html">other site</a>
+        <a href="/root/01-pages/403_test.html">Testing forbidden</a>
     </body>
 </html>
