refactored into oop

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <h1>Hello, World!</h1>
-        <a href="/root/01-pages/message.html">other site</a>
-        <a href="/root/01-pages/403_test.html">Testing forbidden</a>
+        <a href="/www/01-pages/message.html">other site</a>
+        <a href="/www/01-pages/403_test.html">Testing forbidden</a>
     </body>
 </html>
