Added redirection and routing.

--- a/www/01-pages/index.html
+++ b/www/01-pages/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <h1>Hello, World!</h1>
-        <a href="/www/01-pages/message.html">other site</a>
+        <a href="/multipart">other site</a>
         <a href="/www/01-pages/403.html">Testing forbidden</a>
     <form action="/upload" method="POST" enctype="multipart/form-data">
         <!-- File input field -->
