--- a/www/01-pages/index.html
+++ b/www/01-pages/index.html
@@ -2,7 +2,7 @@
     <body>
         <h1>Hello, World!</h1>
         <a href="/multipart">other site</a>
-        <a href="/www/01-pages/403.html">Testing forbidden</a>
+        <a href="/403.html">Testing forbidden</a>
     <form action="/upload" method="POST" enctype="multipart/form-data">
         <!-- File input field -->
         <label for="file">Choose a file:</label>
