Completely rewrote the way file paths are handled there will be problems with this but now I should be able to check against method permissions.

--- a/www/01-pages/nested/testing.html
+++ b/www/01-pages/nested/testing.html
@@ -6,7 +6,7 @@
     <title>D:OHDG:OSDHGV:S?OHVROIHGS"OJ</title>
 </head>
 <body>
-    <h1>Upload Two Files</h1>
+    <h1>OHDG:OSDHGV:S?OHVROIHGS</h1>
 
     <!-- Form for uploading files -->
     <form id="file-upload-form" action="/upload" method="POST" enctype="multipart/form-data">
